--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML Basic</title>
+    <title>HTML Basic Home</title>
 </head>
 <body>
-    <a href="https://www.google.com"><img src="https://www.holbertonschool.com/holberton-logo.png" alt="holberton-logo"></a>
+    <a href="index.html" target="_blank"><img src="holberton-logo.png" alt="holberton-logo"></a>
     
     <h1>First Level Heading</h1>
         <p>First paragraph</p>
@@ -16,6 +16,8 @@
         <p>Third paragraph</p>
 
     <p>That should do it!!</p>
+
+    <p>Check out a few <a href="tweets.html" target="_blank">tweets</a></p>
 
 </body>
 </html>
