Created uniform layout for pages and added content

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,18 +6,80 @@
     <title>HTML Basic Home</title>
 </head>
 <body>
-    <a href="index.html" target="_blank"><img src="holberton-logo.png" alt="holberton-logo"></a>
+
+
+    <header>
+        <a href="index.html" target="_blank"><img src="holberton-logo.png" alt="holberton-logo"></a>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
     
-    <h1>First Level Heading</h1>
-        <p>First paragraph</p>
-    <h2>Second Level Heading</h2>
-        <p>Second paragraph</p>
-    <h3>Third Level heading</h3>
-        <p>Third paragraph</p>
 
-    <p>That should do it!!</p>
+    <main>
+        <!-- Intro sample paragraphs -->
+       <article>
+            <h1>First Level Heading</h1>
+                <p>First paragraph</p>
+            <h2>Second Level Heading</h2>
+                <p>Second paragraph</p>
+            <h3>Third Level heading</h3>
+            <p>Third paragraph</p>
 
-    <p>Check out a few <a href="tweets.html" target="_blank">tweets</a></p>
+            <p>That should do it!!</p>
+
+            <p>Check out a few <a href="tweets.html" target="_blank">tweets</a></p>
+       </article>
+
+       <!-- Comments section -->
+       <aside>
+            <p>placeholder to add comment thread later</p>
+       </aside>
+
+       <!-- Information about learners -->
+       <article>
+            <table>
+                <!-- header row -->
+                <thead>
+                    <tr>
+                       <th>Name</th>
+                       <th>Age</th>
+                       <th>Country</th> 
+                    </tr>
+                </thead>
+                <!-- table body rows -->
+                <tbody>
+                    <tr>
+                        <td>John</td>
+                        <td>25</td>
+                        <td>USA</td>
+                    </tr>
+                    <tr>
+                        <td>Emily</td>
+                        <td>28</td>
+                        <td>Canada</td>
+                    </tr>
+                    <tr>
+                        <td>Michael</td>
+                        <td>32</td>
+                        <td>Australia</td>
+                    </tr>
+                    <tr>
+                        <td>Sophia</td>
+                        <td>21</td>
+                        <td>UK</td>
+                    </tr>
+                </tbody>
+            </table>
+       </article>
+    </main>
+
+    <footer>
+        <p>Made by Osemeka <a href="index.html" target="_blank">here</a></p>
+    </footer>
+
+
 
 </body>
 </html>
