Modified pages to W3C checker standard

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -39,6 +39,7 @@
 
        <!-- Information about learners -->
        <article>
+        <h2>Learners Information</h2>
             <table>
                 <!-- header row -->
                 <thead>
