--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -16,10 +16,11 @@
 
     <main>
         <article>
+            <h2>Tweets</h2>
             <div>
-                <blockquote class="twitter-tweet" data-lang="en" data-theme="dark"><p lang="en" dir="ltr">This is why it is important to train your brain to think about “edge cases”. The user won’t always act as expected. Even at small scale, you can be sure that your product will be used in a way it is not supposed to. 100%<br><br>Also, nice joke :) <a href="https://t.co/rk7JoBzaiu">https://t.co/rk7JoBzaiu</a></p>&mdash; Julien Barbier 🙃❤️🏴‍☠️ 七転び八起き (@julienbarbier42) <a href="https://twitter.com/julienbarbier42/status/1676483450126188544?ref_src=twsrc%5Etfw">July 5, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                <blockquote class="twitter-tweet" data-lang="en" data-theme="dark"><p lang="en" dir="ltr">This is why it is important to train your brain to think about “edge cases”. The user won’t always act as expected. Even at small scale, you can be sure that your product will be used in a way it is not supposed to. 100%<br><br>Also, nice joke :) <a href="https://t.co/rk7JoBzaiu">https://t.co/rk7JoBzaiu</a></p>&mdash; Julien Barbier 🙃❤️🏴‍☠️ 七転び八起き (@julienbarbier42) <a href="https://twitter.com/julienbarbier42/status/1676483450126188544?ref_src=twsrc%5Etfw">July 5, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" ></script>
                 <p>Here is a nice thought for beginners</p><br>
-                <blockquote class="twitter-tweet" data-lang="en" data-theme="dark"><p lang="en" dir="ltr">As you are getting started, don&#39;t think about creating &quot;content&quot;. ❌<br><br>Think about documenting your journey ✅</p>&mdash; K.O.O (@Dominus_Kelvin) <a href="https://twitter.com/Dominus_Kelvin/status/1676269503519367179?ref_src=twsrc%5Etfw">July 4, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                <blockquote class="twitter-tweet" data-lang="en" data-theme="dark"><p lang="en" dir="ltr">As you are getting started, don&#39;t think about creating &quot;content&quot;. ❌<br><br>Think about documenting your journey ✅</p>&mdash; K.O.O (@Dominus_Kelvin) <a href="https://twitter.com/Dominus_Kelvin/status/1676269503519367179?ref_src=twsrc%5Etfw">July 4, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" ></script>
         
             </div>
         </article>
