--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -11,11 +11,15 @@
 
 
     <header>
-            <a href="index.html" target="_blank"><img src="holberton-logo.png" alt="holberton-logo"></a>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="tweets.html">Tweets</a></li>
-        </ul>
+            <a href="index.html" target="_blank"><img src="holberton-logo.png" alt="holberton-logo" class="logo"></a>
+        
+        <div class="navbar">
+
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="tweets.html">Tweets</a></li>
+            </ul>
+        </div>
     </header>
     
 
