--- a/flexbox/5-index.html
+++ b/flexbox/5-index.html
@@ -12,7 +12,8 @@
   <body>
     <!– Header –>
     <header class="header" data-section-theme="dark">
-      <div class="container" class="header-container">         
+      <div class="container">
+        <div class="header-container">         
           <div class="header-logo">
             <a href="#">
               <img src="images/logo-white.png" alt="Techium logo" width="160" height="40">
@@ -44,7 +45,8 @@
             </ul>
           </nav>
         </div>
-      </header>
+      </div>
+    </header>
       <!– Main –>
     <main>
       <!– Hero section –>
